[project]
name = "dirty-data"
version = "0.0.1"
description = "LLMs + tables"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
             "numpy==1.26.4",
             "scipy==1.13.1",
             "torch==2.7.1",
             "tabpfn==2.0.9",
             "optuna==4.4.0",
             "rtdl_num_embeddings==0.0.12",
             "rtdl_revisiting_models==0.0.2",
             "tabm==0.0.3", # NOTE[tabular]
             "scikit-learn==1.6.1",
             "openml>=0.15.1",
             "xgboost>=3.0.4",
             "polars>=1.32.3",
             "smolagents==1.21.2",
             "huggingface-hub==0.33.4",
             "openai==1.95.0",
             "matplotlib>=3.10.6",
             "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
          "nbclassic>=1.3.1,<2",
          "notebook>=7.4.3,<8",
          "pandas>=2.3.0,<3",
          "polars>=1.30.0,<2",
]
